--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -4,7 +4,9 @@ on:
   schedule:
     # Runs at 12am UTC
     - cron: '0 0 * * *'
-  workflow_dispatch:
+  push:
+    branches:
+      - master
 
 jobs:
   update-readme:
@@ -15,5 +17,4 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN}}
-          USERNAME: jozwiaczek
           SHOW_TITLE: true
